# spectral_library

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  comprehensive_spectral_library_catalog.md  mkdocs.yml  plan.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-database.yml  codeql.yml  docs-pages.yml  full-library-benchmarks.yml  package-checks.yml  release-package.yml  security-checks.yml
benchmarks/: default_thresholds.json  smoke_thresholds.json
docs/: cli_reference.md  example_bundle.md  faq.md  github-actions.md  index.md  internal_build_pipeline.md  internal_overview.md  mapping_quickstart.md  metadata_only_actual_links.md  migration.md  mkdocs_hooks.py  official_sensor_examples.md  prepared_runtime_contract.md  production_release_standard_plan.md  python_api_reference.md  release_process.md  remaining_suspicious_repair_plan.md  remaining_suspicious_source_review_20260315.md  scale_factor_verification.md  security_provenance.md  specchio_access.md  spectral-library-siac-decoupling.md  spectral_mapping_usage_plan.md  theory.md  troubleshooting.md  vegetation_library_candidates.md
docs/assets/: mkdocs-extra.css
docs/releases/: 0.1.0.md  0.2.0.md  0.2.1.md  0.3.0.md  0.3.1.md  0.4.0.md  0.5.0.md  0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md
examples/official_mapping/: README.md  official_source_manifest.json
examples/official_mapping/queries/batch/: landsat8_holdout_batch.csv  landsat8_truth_batch.csv
examples/official_mapping/queries/single/: asphalt_landsat8_oli.csv  asphalt_landsat9_oli.csv  asphalt_modis_terra.csv  asphalt_road_landsat-8_oli.csv  asphalt_road_landsat-9_oli2.csv  asphalt_road_modis_terra.csv  asphalt_road_sentinel-2a_msi.csv  asphalt_sentinel2a_msi.csv  blue_spruce_needles_landsat-9_oli2.csv  blue_spruce_needles_landsat8_oli.csv  blue_spruce_needles_sentinel-2a_msi.csv  blue_spruce_needles_terra_modis.csv  bright_soil_landsat8_oli.csv  bright_soil_landsat9_oli.csv  bright_soil_modis_terra.csv  bright_soil_sentinel2a_msi.csv  dense_vegetation_landsat8_oli.csv  dense_vegetation_landsat9_oli.csv  dense_vegetation_modis_terra.csv  dense_vegetation_sentinel2a_msi.csv  pale_brown_silty_loam_landsat-8_oli.csv  pale_brown_silty_loam_landsat-9_oli2.csv  pale_brown_silty_loam_sentinel-2a_msi.csv  pale_brown_silty_loam_sentinel2a_msi.csv  pale_brown_silty_loam_terra_modis.csv  tap_water_landsat-9_oli2.csv  tap_water_landsat8_oli.csv  tap_water_modis_terra.csv  tap_water_sentinel-2a_msi.csv  turbid_water_landsat8_oli.csv  turbid_water_landsat9_oli.csv  turbid_water_modis_terra.csv  turbid_water_sentinel2a_msi.csv  veg_soil_mix_landsat8_oli.csv  veg_soil_mix_landsat9_oli.csv  veg_soil_mix_modis_terra.csv  veg_soil_mix_sentinel2a_msi.csv
examples/official_mapping/results/metrics/: neighbor_estimator_holdout_comparison.csv  neighbor_estimator_holdout_comparison.json  pairwise_band_metrics.csv  pairwise_band_metrics.json
examples/official_mapping/results/selected/: asphalt_landsat8_to_modis.csv  asphalt_road_landsat8_to_modis.csv  blue_spruce_needles_modis_to_sentinel2a.csv  bright_soil_sentinel2a_to_landsat9.csv  dense_vegetation_modis_to_sentinel2a.csv  landsat8_to_sentinel2a_batch.csv  landsat8_to_sentinel2a_batch_diagnostics.json  landsat8_to_sentinel2a_holdout_batch.csv  landsat8_to_sentinel2a_holdout_batch_diagnostics.json  landsat8_to_sentinel2a_holdout_neighbor_review.csv  tap_water_sentinel2a_full_spectrum.csv  (+6 more)
examples/official_mapping/srfs/: landsat-8_oli.json  landsat-9_oli2.json  landsat8_oli.json  landsat9_oli.json  modis_terra.json  sentinel-2a_msi.json  sentinel2a_msi.json  terra_modis.json
manifests/: siac_excluded_spectra.csv  sources.csv
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: blue_jump_diagnostics.py  blue_repair_comparison.py  build_distribution.py  build_docs_site.py  build_official_mapping_examples.py  build_real_siac_library.py  build_real_siac_library_from_scratch.py  create_mapping_smoke_fixture.py  curate_source_absorption_rules.py  curate_source_rules.py  exclude_sources_from_dataset.py  filter_by_native_range.py  filter_curated_subset_rules.py  fix_vegetation_peak.py  fix_vegetation_urban.py  full_processed_spectra_review.py  full_spectral_comparison.py  generate_repair_summary_report.py  landcover_analysis.py  merge_normalized_roots.py  package_prepared_runtime.py  pca_gap_fill.py  plot_absorption_smoothing_overview.py  plot_random_library_spectra.py  plot_repair_examples.py  plot_santa_strong_smoothing_demo.py  plot_siac_visualizations.py  plot_suspicious_spectra_by_source.py  repair_emit_santa_artifacts.py  repair_ghisacasia_artifacts.py  repair_remaining_source_artifacts.py  repair_vegetation_outliers.py  repair_vegetation_water_band_spikes.py  robust_visible_outlier_fix.py  robust_whittaker_outlier_fix.py  run_full_library_benchmarks.py  sample_processed_spectra_review.py  select_best_absorption_variant.py  simple_mean_jump_report.py  source_balanced_landcover.py  (+1 more)
src/spectral_library/: __init__.py  _rustaccel.py  batch.py  build_db.py  cli.py  coverage_filter.py  library_package.py  manifest.py  mapping.py  normalize.py  quality_plots.py  runtime_download.py  siac.py
src/spectral_library/distribution/: __init__.py  resolver.py  runtime.py
src/spectral_library/fetchers/: __init__.py  base.py  ecosis.py  ecostress.py  ess_dive.py  github_archive.py  http_utils.py  manual.py  mendeley.py  neon.py  pangaea.py  specchio.py  static_http.py  zenodo.py
src/spectral_library/mapping/: __init__.py  inputs.py  runtime_builder.py
src/spectral_library/normalization/: __init__.py  coverage.py  package.py  pipeline.py
src/spectral_library/sources/: __init__.py  catalog.py  manifest.py
tests/: test_batch.py  test_build_db_and_cli.py  test_coverage_filter.py  test_docs_site.py  test_fetchers.py  test_full_library_benchmarks.py  test_library_package.py  test_manifest.py  test_mapping.py  test_normalize.py  test_official_examples.py  test_quality_plots.py  test_release_contracts.py  test_siac.py
(+24 files in other folders)
