[build-system]
requires = ["setuptools>=68", "setuptools-rust>=1.12.0", "wheel", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-library"
version = "0.3.0"
description = "Spectral library build, preparation, and retrieval-based mapping toolkit."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
  {name = "Marc Yin"},
]
maintainers = [
  {name = "Marc Yin"},
]
keywords = [
  "hyperspectral",
  "multispectral",
  "reflectance",
  "remote-sensing",
  "spectral-library",
  "spectral-mapping",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "duckdb>=1.1.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/MarcYin/spectral_library"
Repository = "https://github.com/MarcYin/spectral_library"
Documentation = "https://marcyin.github.io/spectral_library/"
Issues = "https://github.com/MarcYin/spectral_library/issues"
Changelog = "https://github.com/MarcYin/spectral_library/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.14",
]
knn = [
  "scipy>=1.11.0",
]
knn-faiss = [
  "faiss-cpu>=1.8.0",
]
knn-pynndescent = [
  "pynndescent>=0.5.13",
]
knn-scann = [
  "scann>=1.4.2; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
zarr = [
  "zarr>=2.18.0,<3",
]
knn-all = [
  "scipy>=1.11.0",
  "faiss-cpu>=1.8.0",
  "pynndescent>=0.5.13",
  "scann>=1.4.2; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
internal-build = [
  "matplotlib>=3.8.0",
  "netCDF4>=1.7.0",
  "openpyxl>=3.1.0",
  "rdata>=0.11.0",
]
accel = [
  "whitsmooth-rust>=0.1.3",
]
dev = [
  "build>=1.2.2",
  "coverage>=7.6.0",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "matplotlib>=3.8.0",
  "netCDF4>=1.7.0",
  "openpyxl>=3.1.0",
  "pymdown-extensions>=10.14",
  "rdata>=0.11.0",
  "scipy>=1.11.0",
  "setuptools-rust>=1.12.0",
  "whitsmooth-rust>=0.1.3",
  "zarr>=2.18.0,<3",
]

[project.scripts]
spectral-library = "spectral_library.cli:main"
spectral-library-internal = "spectral_library.cli:main_internal"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["*-musllinux_*", "*-win32", "*-manylinux_i686"]
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.windows]
before-all = "rustup default stable"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spectral_library = ["py.typed"]
